default background set back to background-picture.jpg, list text-align fix

--- a/src/app/content/base/base.component.scss
+++ b/src/app/content/base/base.component.scss
@@ -8,7 +8,7 @@
 
 .page-background {
   display: flex;
-  background-image: url('/assets/images/asms18-bg2.jpg');
+  background-image: url('/assets/images/background-picture.jpg');
   background-repeat: no-repeat;
   background-position: center top;
   background-size: $width-page-bg auto;
