--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -61,6 +61,7 @@ $retina-width: 1680px;
     display: block;
     padding: #{$font-size / 2} #{$font-size * 2};
     overflow-y: hidden;
+    text-align: left;
 
     &:before {
       content: '';
